# RType

./: CMakeCache.txt  CMakeLists.txt  DEVELOPPER.md  Doxyfile  MODS.md  Makefile  PROTOCOL.md  README.md  buildLinux.sh  cmake_install.cmake  doClangFormat.sh
.github/workflows/: clang_format.yml  doxygen-implementation.yml  gtest_action.yml  linux_compilation.yml  release.yml  windows_compilation.yml
ECS/Component/: Component.cpp  Component.hpp
ECS/Entity/: Entity.cpp  Entity.hpp
ECS/Registry/: Registry.hpp
ECS/SparseArrays/: SparseArrays.hpp
ECS/System/: System.cpp  System.hpp
Game/: CMakeLists.txt  Input.hpp  main.cpp
Game/Client/: Game.cpp  Game.hpp
Server/: CMakeLists.txt  main.cpp
Server/GameServer/: GameServer.cpp  GameServer.hpp
Server/Server/: Server.cpp  Server.hpp
TestsUnitaires/: ClientTest.cpp  EncapsulationTest.cpp  LibraryCreatePackageTest.cpp  LibraryEntityPackagesTest.cpp  LibrarySocketTest.cpp  LibraryWindowTest.cpp
